# VoxelEngine

./: .gitignore  CMakeLists.txt  README.md
src/: Assets.cpp  Assets.h  Declarations.h  VoxelEngine.cpp  WorldRender.h  voxel_engine.cpp
src/files/: Files.cpp  Files.h  WorldFiles.cpp  WorldFiles.h
src/graphics/: Batch2D.cpp  Batch2D.h  LineBatch.cpp  LineBatch.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VoxelRenderer.cpp  VoxelRenderer.h
src/lighting/: LightSolver.cpp  LightSolver.h  Lighting.cpp  Lighting.h  Lightmap.cpp  Lightmap.h
src/loaders/: PNGLoading.cpp  PNGLoading.h  png_loading.cpp  png_loading.h
src/objects/: Player.cpp  Player.h
src/physics/: Hitbox.h  PhysicsSolver.cpp  PhysicsSolver.h
src/voxels/: Block.h  Chunk.cpp  Chunk.h  Chunks.cpp  Chunks.h  ChunksController.cpp  ChunksController.h  ChunksLoader.cpp  ChunksLoader.h  Voxel.h  WorldGenerator.cpp  WorldGenerator.h
src/window/: Camera.cpp  Camera.h  Events.cpp  Events.h  Window.cpp  Window.h
